--- a/features_explanation.Rmd
+++ b/features_explanation.Rmd
@@ -68,7 +68,7 @@ Careers of the students from the first level degree (Bachelor's degree).
 - CAR_N: numero carriere
 - CARR_DETT_FLTP: corso di lauera
 - CARR_INGR_FLTP: ?
-- CARR_INI_AA vs CARR_INGR_AA: inizio carriera puù essere fatto presso altra università
+- CARR_INI_AA vs CARR_INGR_AA: inizio carriera può essere fatto presso altra università
 - CARR_FLST: A: attivo, S sospeso, L laureato, D dropout
 - CARR_FIN_FLTP: ?
 - CDS_POLI_EDU_FLD: Faculty type
